<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="410dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="340dp"
                android:layout_height="178dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="35dp"
                android:layout_marginBottom="0dp"
                app:srcCompat="@drawable/ic_launcher_background" />

            <Button
                android:id="@+id/button2"
                android:layout_width="270dp"
                android:layout_height="50dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="70dp"
                android:layout_marginBottom="10dp"
                android:text="Hacer foto recordatorio"
                android:textSize="15sp" />

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="25dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/MedicineName"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="Nombre del medicamento"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:id="@+id/CodigoNacional"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="Codigo Nacional "
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="Inicio del plan de medicacion"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/addDate"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="Seleccionar Fecha"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="104dp"
                        android:layout_height="28dp"
                        android:layout_weight="1"
                        android:text="Cuantos comprimidos tienes?"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/nComprimidos"
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="number"
                        android:textColor="@android:color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:paddingVertical="3dp"
                        android:text="Cuantos dias?"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/numDays"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="number" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingVertical="5dp"
                        android:text="Horarios:"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/addHour"
                        android:layout_width="150dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="20dp"
                        android:text="Añadir Hora"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/btnCleanHours"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:text="Limpiar"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="13dp"
                    android:orientation="vertical" />

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="180dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="90dp"
                    android:layout_marginEnd="90dp"
                    android:text="Guardar" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>