...
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="3dp"
        android:text="Hacer Foto"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
...
