...
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/signInEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_field"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:ems="10"
...
            android:layout_height="wrap_content"
            app:boxStrokeWidth="0dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signInPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_field"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="10dp"
                android:ems="10"
...

            <Space
                android:layout_width="8dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="72dp"
                android:layout_weight="1"
                android:background="@drawable/ic_field"
                android:text="@string/loginButton"
...

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/googleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/googleButtonText"
            android:textSize="20sp" />

    </LinearLayout>
...
