...
    <string name="onBackDialogMessage">¿Seguro que quieres salir de Medicalthy?</string>

    //Take Picture ACtivity
    <string name="takePicButton">Take Picture</string>

    //Error Messages
    <string name="simpleErrorMessage">Error</string>
    <string name="authErrorMessage">Se ha producido un error al Iniciar Sesion.\nCompruebe que el email tenga el siguiente estilo: ejemplo@gmail.com</string>
    <string name="googleAuthErrorMessage">Se ha producido un error al Iniciar Sesion con Google.\n</string>
    <string name="emptyCredentialsErrorMessage">Correo electrónico i/o contraseña vacíos. Por favor, ingrese el texto restante.</string>
    <string name="lengthCredentialsErrorMessage">El tamaño de contraseña es demasiado corto (mínimo 6 caracteres). Por favor, ingrese el texto restante.</string>
    <string name="ageCredentialsErrorMessage">La edad seleccionada no es válida. Por favor, seleccione una edad entre 1 y 120 .</string>
    <string name="takePicErrorMessage">El sistema no ha podido reconocer el texto de la imagen. Por favor, repita la foto para intentar reconocer el texto </string>
    <string name="takePicPermission">Se necesitan los permisos de la cámara para poder hacer la foto </string>
    <string name="NotificationNumDays">Por favor introduzca un número válido </string>

...
